--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/menu.css
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/menu.css
@@ -26,6 +26,7 @@ body {
     font-size: 24px;
     margin-bottom: 15px;
     text-align: center;
+    color: black;
 }
 .menu{
     margin: 20px;
@@ -47,6 +48,7 @@ body {
     text-align: center;
     display: block;
     font-weight: 550;
+    color: black;
 }
 .menu img{
     width: 200px;
