--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/index.css
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/index.css
@@ -75,12 +75,14 @@ section{
     height: 32px;
     transition: color 0.3s ease;
 }
-
 .search-icon img:hover {
     cursor: pointer;
     z-index: 10000;
 }
-
+.images .shopping-cart img{
+    width: 32px;
+    height: 32px;
+}
 .search-bar {
     position: absolute;
     top: -100%;
@@ -151,26 +153,6 @@ section{
     margin-top: 104px; /* Added margin-top to create space below the header */
 }
 
-.about{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
-    align-items: center;
-    gap: 1.5em;
-    
-}
-.about-image img{
-    border-radius: 0.5rem;
-}
-.about h2{
-    font: size 1.8rem;
-    text-transform: uppercase;
-}
-
-.about p{
-    text-align: justify;
-    font-size: 0.9rem;
-    margin: 0.5rem 0 1rem;
-}
 
 .footer {
     display: flex;
